@startuml Stack
title Stack
class Stack #GhostWhite {
- Element? _head = null
---
+ bool getIsEmpty()
---
+ void Push(double data)
+ double Pop()
}
class Element #GhostWhite {
- double _data
- Element? _next
---
+ double getData()
+ Void setData(double value)
+ Element? getNext()
+ Void setNext(Element? value)
---
}
Stack "0..1" *-- "1" Element : _head
Element "0..1" *-- "1" Element : _next
@enduml
